--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header class="site-header">
-        <hgroup>
+        <hgroup class="site-header-user">
             <h1>Morgan Oakley (@morgan)</h1>
             <p>Hi there,</p>
+            <img>
         </hgroup>
-        <ul>
+        <ul class="site-header-options">
             <li>
                 <a href="#">New</a>
             </li>
@@ -23,6 +24,15 @@
                 <a href="#">Share</a>
             </li>
         </ul>
+        <div class="site-header-search">
+            <form>
+                <input type="text" name="search">
+                <button type="submit"></button>
+            </form>
+        </div>
+        <div class="site-header-nav">
+
+        </div>
     </header>
     <section class="site-main">
 
