finished header skeleton, finished sidebar skeleton

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <header class="site-header">
         <hgroup class="site-header-user">
@@ -31,15 +33,81 @@
             </form>
         </div>
         <div class="site-header-nav">
-
+            <a class="site-header-nav-bell">
+                <i></i>
+            </a>
+            <a>
+                <img>
+                <p>Morgan Oakley</p>
+            </a>
         </div>
     </header>
     <section class="site-main">
 
     </section>
     <section class="site-sidebar">
+        <div class="site-sidebar-header">
+            <hgroup>
+                <svg></svg>
+                <h2>Dashboard</h2>
+            </hgroup>
+        </div>
+        <div class="site-sidebar-nav">
+            <ul>
+                <li>
+                    <a href="#">
+                        <svg></svg>Home
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>Profile
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>Messages
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>History
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>Tasks
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>Communities
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="site-sidebar-options">
+            <ul>
+                <li>
+                    <a href="#">
+                        <svg></svg>Settings
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>Support
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg></svg>Privacy
+                    </a>
+                </li>
+            </ul>
+        </div>
 
     </section>
-    
+
 </body>
+
 </html>
