--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
         </div>
     </header>
     <section class="site-main">
+        <div class="site-main-projects">
+            
+        </div>
+        <div class="site-main-announcements">
 
+        </div>
+        <div class="site-main-trending">
+
+        </div>
     </section>
     <section class="site-sidebar">
         <div class="site-sidebar-header">
