added skeleton to main-projects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,84 @@
     </header>
     <section class="site-main">
         <div class="site-main-projects">
-            
+            <a href="">
+                <h3></h3>
+                <p></p>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+            </a>
+            <a href="">
+                <h3></h3>
+                <p></p>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+            </a>
+            <a href="">
+                <h3></h3>
+                <p></p>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+            </a>
+            <a href="">
+                <h3></h3>
+                <p></p>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+            </a>
+            <a href="">
+                <h3></h3>
+                <p></p>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+            </a>
+            <a href="">
+                <h3></h3>
+                <p></p>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+                <a href="">
+                    <svg></svg>
+                </a>
+            </a>
         </div>
         <div class="site-main-announcements">
 
