added dummy content to site-main-projects

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </form>
         </div>
         <div class="site-header-nav">
-            <a class="site-header-nav-bell">
+            <a class="site-header-nav-bell" href="#">
                 <i></i>
             </a>
-            <a>
+            <a class="site-header-nav-user">
                 <img>
                 <p>Morgan Oakley</p>
             </a>
@@ -44,81 +44,82 @@
     </header>
     <section class="site-main">
         <div class="site-main-projects">
-            <a href="">
-                <h3></h3>
-                <p></p>
-                <a href="">
+            <h2>Your Projects</h2>
+            <a class="site-main-projects-item" href="#">
+                <h3>Super Cool Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia recusandae ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore eligendi qui!</p>
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
-                    <svg></svg>
-                </a>
-            </a>
-            <a href="">
-                <h3></h3>
-                <p></p>
-                <a href="">
-                    <svg></svg>
-                </a>
-                <a href="">
-                    <svg></svg>
-                </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
             </a>
-            <a href="">
-                <h3></h3>
-                <p></p>
-                <a href="">
+            <a class="site-main-projects-item" href="#">
+                <h3>Less Cool Project</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat hic libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore aperiam optio ipsa non culpa excepturi?</p>
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
-                    <svg></svg>
-                </a>
-            </a>
-            <a href="">
-                <h3></h3>
-                <p></p>
-                <a href="">
-                    <svg></svg>
-                </a>
-                <a href="">
-                    <svg></svg>
-                </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
             </a>
-            <a href="">
-                <h3></h3>
-                <p></p>
-                <a href="">
+            <a class="site-main-projects-item" href="#">
+                <h3>Impossible App</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam doloremque, voluptates magnam exercitationem debitis quas quae!</p>
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
             </a>
-            <a href="">
-                <h3></h3>
-                <p></p>
-                <a href="">
+            <a class="site-main-projects-item" href="#">
+                <h3>Easy Peasy App</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate, dolorem necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem assumenda officiis architecto eligendi beatae dolorum? Laboriosam assumenda debitis necessitatibus?</p>
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
+                <a href="#">
                     <svg></svg>
                 </a>
-                <a href="">
+                <a href="#">
+                    <svg></svg>
+                </a>
+            </a>
+            <a class="site-main-projects-item" href="#">
+                <h3>Ad Blocker</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus corporis veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim reiciendis fuga omnis, doloremque similique iure.</p>
+                <a href="#">
+                    <svg></svg>
+                </a>
+                <a href="#">
+                    <svg></svg>
+                </a>
+                <a href="#">
+                    <svg></svg>
+                </a>
+            </a>
+            <a class="site-main-projects-item" href="#">
+                <h3>Money Maker</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil accusamus autem similique omnis?</p>
+                <a href="#">
+                    <svg></svg>
+                </a>
+                <a href="#">
+                    <svg></svg>
+                </a>
+                <a href="#">
                     <svg></svg>
                 </a>
             </a>
