--- a/index.html
+++ b/index.html
@@ -125,7 +125,25 @@
             </a>
         </div>
         <div class="site-main-announcements">
-
+            <h2>Announcements</h2>
+            <div class="site-main-announcements-item">
+                <a href="#">
+                    <h3></h3>
+                    <p></p>
+                </a>
+            </div>
+            <div class="site-main-announcements-item">
+                <a href="#">
+                    <h3></h3>
+                    <p></p>
+                </a>
+            </div>
+            <div class="site-main-announcements-item">
+                <a href="#">
+                    <h3></h3>
+                    <p></p>
+                </a>
+            </div>
         </div>
         <div class="site-main-trending">
 
