--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <h2>Your Projects</h2>
             <a class="site-main-projects-item" href="#">
                 <h3>Super Cool Project</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia recusandae ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore eligendi qui!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia recusandae
+                    ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore eligendi
+                    qui!</p>
                 <a href="#">
                     <svg></svg>
                 </a>
@@ -60,7 +62,9 @@
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Less Cool Project</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat hic libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore aperiam optio ipsa non culpa excepturi?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat hic
+                    libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore aperiam
+                    optio ipsa non culpa excepturi?</p>
                 <a href="#">
                     <svg></svg>
                 </a>
@@ -73,7 +77,9 @@
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Impossible App</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam doloremque, voluptates magnam exercitationem debitis quas quae!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae
+                    corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam doloremque,
+                    voluptates magnam exercitationem debitis quas quae!</p>
                 <a href="#">
                     <svg></svg>
                 </a>
@@ -86,7 +92,9 @@
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Easy Peasy App</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate, dolorem necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem assumenda officiis architecto eligendi beatae dolorum? Laboriosam assumenda debitis necessitatibus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate, dolorem
+                    necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem assumenda
+                    officiis architecto eligendi beatae dolorum? Laboriosam assumenda debitis necessitatibus?</p>
                 <a href="#">
                     <svg></svg>
                 </a>
@@ -99,7 +107,9 @@
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Ad Blocker</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus corporis veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim reiciendis fuga omnis, doloremque similique iure.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus corporis
+                    veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim reiciendis
+                    fuga omnis, doloremque similique iure.</p>
                 <a href="#">
                     <svg></svg>
                 </a>
@@ -112,7 +122,9 @@
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Money Maker</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil accusamus autem similique omnis?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio
+                    dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil accusamus
+                    autem similique omnis?</p>
                 <a href="#">
                     <svg></svg>
                 </a>
@@ -146,7 +158,26 @@
             </div>
         </div>
         <div class="site-main-trending">
-
+            <a href="#">
+                <img src="" alt="">
+                <p class="site-main-trending-handle"></p>
+                <p class="site-main-trending-about"></p>
+            </a>
+            <a href="#">
+                <img src="" alt="">
+                <p class="site-main-trending-handle"></p>
+                <p class="site-main-trending-about"></p>
+            </a>
+            <a href="#">
+                <img src="" alt="">
+                <p class="site-main-trending-handle"></p>
+                <p class="site-main-trending-about"></p>
+            </a>
+            <a href="#">
+                <img src="" alt="">
+                <p class="site-main-trending-handle"></p>
+                <p class="site-main-trending-about"></p>
+            </a>
         </div>
     </section>
     <section class="site-sidebar">
