--- a/index.html
+++ b/index.html
@@ -56,90 +56,90 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia recusandae
                     ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore eligendi
                     qui!</p>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Less Cool Project</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat hic
                     libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore aperiam
                     optio ipsa non culpa excepturi?</p>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Impossible App</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae
                     corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam doloremque,
                     voluptates magnam exercitationem debitis quas quae!</p>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Easy Peasy App</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate, dolorem
                     necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem assumenda
                     officiis architecto eligendi beatae dolorum? Laboriosam assumenda debitis necessitatibus?</p>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Ad Blocker</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus corporis
                     veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim reiciendis
                     fuga omnis, doloremque similique iure.</p>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
             </a>
             <a class="site-main-projects-item" href="#">
                 <h3>Money Maker</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio
                     dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil accusamus
                     autem similique omnis?</p>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
-                <a href="#">
-                    <svg></svg>
-                </a>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
+                <button>
+                    <!-- <svg></svg> -->
+                </button>
             </a>
         </div>
         <div class="site-main-announcements">
@@ -189,7 +189,7 @@
     <section class="site-sidebar">
         <div class="site-sidebar-header">
             <hgroup>
-                <svg></svg>
+                <!-- <svg></svg> -->
                 <h2>Dashboard</h2>
             </hgroup>
         </div>
@@ -197,32 +197,38 @@
             <ul>
                 <li>
                     <a href="#">
-                        <svg></svg>Home
+                        <!-- <svg></svg> -->
+                        Home
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>Profile
+                        <!-- <svg></svg> -->
+                        Profile
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>Messages
+                        <!-- <svg></svg> -->
+                        Messages
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>History
+                        <!-- <svg></svg> -->
+                        History
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>Tasks
+                        <!-- <svg></svg> -->
+                        Tasks
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>Communities
+                        <!-- <svg></svg> -->
+                        Communities
                     </a>
                 </li>
             </ul>
@@ -231,17 +237,20 @@
             <ul>
                 <li>
                     <a href="#">
-                        <svg></svg>Settings
+                        <!-- <svg></svg> -->
+                        Settings
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>Support
+                        <!-- <svg></svg> -->
+                        Support
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <svg></svg>Privacy
+                        <!-- <svg></svg> -->
+                        Privacy
                     </a>
                 </li>
             </ul>
