--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <section class="site-main">
-        <h2>Your Projects</h2>
+        <h2 class="site-main-projects-header">Your Projects</h2>
         <div class="site-main-projects">
             <a class="site-main-projects-item" href="#">
                 <h3>Super Cool Project</h3>
@@ -143,46 +143,47 @@
             </a>
         </div>
         <div class="site-main-announcements">
-            <h2>Announcements</h2>
+            <h2 class="site-main-announcements-header">Announcements</h2>
             <div class="site-main-announcements-item">
                 <a href="#">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Site Maintenance</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque cupiditate dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia voluptates, ea vero odio minima.</p>
                 </a>
             </div>
             <div class="site-main-announcements-item">
                 <a href="#">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Community Share Day</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia nostrum quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam non nobis eaque fugiat ducimus atque quidem.</p>
                 </a>
             </div>
             <div class="site-main-announcements-item">
                 <a href="#">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Updated Privacy Policy</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo aperiam, alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem obcaecati! Doloribus culpa enim cum iusto?</p>
                 </a>
             </div>
         </div>
         <div class="site-main-trending">
-            <a href="#">
+            <h2>Trending</h2>    
+            <a href="#" class="site-main-trending-item">
                 <img src="" alt="">
-                <p class="site-main-trending-handle"></p>
-                <p class="site-main-trending-about"></p>
+                <p class="site-main-trending-handle">@tegan</p>
+                <p class="site-main-trending-about">World Peace Builder</p>
             </a>
-            <a href="#">
+            <a href="#" class="site-main-trending-item">
                 <img src="" alt="">
-                <p class="site-main-trending-handle"></p>
-                <p class="site-main-trending-about"></p>
+                <p class="site-main-trending-handle">@Morgan</p>
+                <p class="site-main-trending-about">Super Cool Project</p>
             </a>
-            <a href="#">
+            <a href="#" class="site-main-trending-item">
                 <img src="" alt="">
-                <p class="site-main-trending-handle"></p>
-                <p class="site-main-trending-about"></p>
+                <p class="site-main-trending-handle">@kendall</p>
+                <p class="site-main-trending-about">Life Changing App</p>
             </a>
-            <a href="#">
+            <a href="#" class="site-main-trending-item">
                 <img src="" alt="">
-                <p class="site-main-trending-handle"></p>
-                <p class="site-main-trending-about"></p>
+                <p class="site-main-trending-handle">@alex</p>
+                <p class="site-main-trending-about">No Traffic Maker</p>
             </a>
         </div>
     </section>
