fixed an issue with Announcements header nto displaying correctly, continued to style site main

--- a/index.html
+++ b/index.html
@@ -147,24 +147,30 @@
             <div class="site-main-announcements-item">
                 <a href="#">
                     <h3>Site Maintenance</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque cupiditate dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia voluptates, ea vero odio minima.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque cupiditate
+                        dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
+                        voluptates, ea vero odio minima.</p>
                 </a>
             </div>
             <div class="site-main-announcements-item">
                 <a href="#">
                     <h3>Community Share Day</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia nostrum quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam non nobis eaque fugiat ducimus atque quidem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia nostrum
+                        quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam non nobis
+                        eaque fugiat ducimus atque quidem.</p>
                 </a>
             </div>
             <div class="site-main-announcements-item">
                 <a href="#">
                     <h3>Updated Privacy Policy</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo aperiam, alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem obcaecati! Doloribus culpa enim cum iusto?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo aperiam,
+                        alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem obcaecati!
+                        Doloribus culpa enim cum iusto?</p>
                 </a>
             </div>
         </div>
         <div class="site-main-trending">
-            <h2>Trending</h2>    
+            <h2>Trending</h2>
             <a href="#" class="site-main-trending-item">
                 <img src="" alt="">
                 <p class="site-main-trending-handle">@tegan</p>
