--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <section class="site-main">
-        <h2 class="site-main-projects-header">Your Projects</h2>
+        <h2>Your Projects</h2>
         <div class="site-main-projects">
             <a class="site-main-projects-item" href="#">
                 <h3>Super Cool Project</h3>
@@ -143,7 +143,7 @@
             </a>
         </div>
         <div class="site-main-announcements">
-            <h2 class="site-main-announcements-header">Announcements</h2>
+            <h2>Announcements</h2>
             <div class="site-main-announcements-item">
                 <a href="#">
                     <h3>Site Maintenance</h3>
