added new divs and classes to announcements and trending, consolidated styles

--- a/index.html
+++ b/index.html
@@ -144,53 +144,60 @@
         </div>
         <div class="site-main-announcements">
             <h2>Announcements</h2>
-            <div class="site-main-announcements-item">
-                <a href="#">
-                    <h3>Site Maintenance</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque cupiditate
-                        dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
-                        voluptates, ea vero odio minima.</p>
-                </a>
-            </div>
-            <div class="site-main-announcements-item">
-                <a href="#">
-                    <h3>Community Share Day</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia nostrum
-                        quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam non nobis
-                        eaque fugiat ducimus atque quidem.</p>
-                </a>
-            </div>
-            <div class="site-main-announcements-item">
-                <a href="#">
-                    <h3>Updated Privacy Policy</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo aperiam,
-                        alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem obcaecati!
-                        Doloribus culpa enim cum iusto?</p>
-                </a>
+            <div class="site-main-announcements-content">
+                <div class="site-main-announcements-item">
+                    <a href="#">
+                        <h3>Site Maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque cupiditate
+                            dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
+                            voluptates, ea vero odio minima.</p>
+                    </a>
+                </div>
+                <div class="site-main-announcements-item">
+                    <a href="#">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia
+                            nostrum
+                            quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam non
+                            nobis
+                            eaque fugiat ducimus atque quidem.</p>
+                    </a>
+                </div>
+                <div class="site-main-announcements-item">
+                    <a href="#">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo
+                            aperiam,
+                            alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem obcaecati!
+                            Doloribus culpa enim cum iusto?</p>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="site-main-trending">
             <h2>Trending</h2>
-            <a href="#" class="site-main-trending-item">
-                <img src="" alt="">
-                <p class="site-main-trending-handle">@tegan</p>
-                <p class="site-main-trending-about">World Peace Builder</p>
-            </a>
-            <a href="#" class="site-main-trending-item">
-                <img src="" alt="">
-                <p class="site-main-trending-handle">@Morgan</p>
-                <p class="site-main-trending-about">Super Cool Project</p>
-            </a>
-            <a href="#" class="site-main-trending-item">
-                <img src="" alt="">
-                <p class="site-main-trending-handle">@kendall</p>
-                <p class="site-main-trending-about">Life Changing App</p>
-            </a>
-            <a href="#" class="site-main-trending-item">
-                <img src="" alt="">
-                <p class="site-main-trending-handle">@alex</p>
-                <p class="site-main-trending-about">No Traffic Maker</p>
-            </a>
+            <div class="site-main-trending-content">
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@tegan</p>
+                    <p class="site-main-trending-about">World Peace Builder</p>
+                </a>
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@Morgan</p>
+                    <p class="site-main-trending-about">Super Cool Project</p>
+                </a>
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@kendall</p>
+                    <p class="site-main-trending-about">Life Changing App</p>
+                </a>
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@alex</p>
+                    <p class="site-main-trending-about">No Traffic Maker</p>
+                </a>
+            </div>
         </div>
     </section>
     <section class="site-sidebar">
