--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         </div>
     </header>
     <section class="site-main">
-        <h2>Your Projects</h2>
         <div class="site-main-projects">
+        <h2>Your Projects</h2>
+        <div class="site-main-projects-content">
             <a class="site-main-projects-item" href="#">
                 <h3>Super Cool Project</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia recusandae
