--- a/index.html
+++ b/index.html
@@ -50,156 +50,164 @@
     </header>
     <section class="site-main">
         <div class="site-main-projects">
-        <h2>Your Projects</h2>
-        <div class="site-main-projects-content">
-            <a class="site-main-projects-item" href="#">
-                <h3>Super Cool Project</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia recusandae
-                    ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore eligendi
-                    qui!</p>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-            </a>
-            <a class="site-main-projects-item" href="#">
-                <h3>Less Cool Project</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat hic
-                    libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore aperiam
-                    optio ipsa non culpa excepturi?</p>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-            </a>
-            <a class="site-main-projects-item" href="#">
-                <h3>Impossible App</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae
-                    corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam doloremque,
-                    voluptates magnam exercitationem debitis quas quae!</p>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-            </a>
-            <a class="site-main-projects-item" href="#">
-                <h3>Easy Peasy App</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate, dolorem
-                    necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem assumenda
-                    officiis architecto eligendi beatae dolorum? Laboriosam assumenda debitis necessitatibus?</p>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-            </a>
-            <a class="site-main-projects-item" href="#">
-                <h3>Ad Blocker</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus corporis
-                    veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim reiciendis
-                    fuga omnis, doloremque similique iure.</p>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-            </a>
-            <a class="site-main-projects-item" href="#">
-                <h3>Money Maker</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio
-                    dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil accusamus
-                    autem similique omnis?</p>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-                <button>
-                    <!-- <svg></svg> -->
-                </button>
-            </a>
-        </div>
-        <div class="site-main-announcements">
-            <h2>Announcements</h2>
-            <div class="site-main-announcements-content">
-                <div class="site-main-announcements-item">
-                    <a href="#">
-                        <h3>Site Maintenance</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque cupiditate
-                            dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
-                            voluptates, ea vero odio minima.</p>
-                    </a>
+            <h2>Your Projects</h2>
+            <div class="site-main-projects-content">
+                <a class="site-main-projects-item" href="#">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia
+                        recusandae
+                        ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore
+                        eligendi
+                        qui!</p>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                </a>
+                <a class="site-main-projects-item" href="#">
+                    <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat hic
+                        libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore
+                        aperiam
+                        optio ipsa non culpa excepturi?</p>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                </a>
+                <a class="site-main-projects-item" href="#">
+                    <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae
+                        corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam doloremque,
+                        voluptates magnam exercitationem debitis quas quae!</p>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                </a>
+                <a class="site-main-projects-item" href="#">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate, dolorem
+                        necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem assumenda
+                        officiis architecto eligendi beatae dolorum? Laboriosam assumenda debitis necessitatibus?</p>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                </a>
+                <a class="site-main-projects-item" href="#">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus corporis
+                        veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim reiciendis
+                        fuga omnis, doloremque similique iure.</p>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                </a>
+                <a class="site-main-projects-item" href="#">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio
+                        dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil
+                        accusamus
+                        autem similique omnis?</p>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                    <button>
+                        <!-- <svg></svg> -->
+                    </button>
+                </a>
                 </div>
-                <div class="site-main-announcements-item">
-                    <a href="#">
-                        <h3>Community Share Day</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia
-                            nostrum
-                            quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam non
-                            nobis
-                            eaque fugiat ducimus atque quidem.</p>
-                    </a>
+            </div>
+            <div class="site-main-announcements">
+                <h2>Announcements</h2>
+                <div class="site-main-announcements-content">
+                    <div class="site-main-announcements-item">
+                        <a href="#">
+                            <h3>Site Maintenance</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque
+                                cupiditate
+                                dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
+                                voluptates, ea vero odio minima.</p>
+                        </a>
+                    </div>
+                    <div class="site-main-announcements-item">
+                        <a href="#">
+                            <h3>Community Share Day</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia
+                                nostrum
+                                quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam
+                                non
+                                nobis
+                                eaque fugiat ducimus atque quidem.</p>
+                        </a>
+                    </div>
+                    <div class="site-main-announcements-item">
+                        <a href="#">
+                            <h3>Updated Privacy Policy</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo
+                                aperiam,
+                                alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem
+                                obcaecati!
+                                Doloribus culpa enim cum iusto?</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="site-main-announcements-item">
-                    <a href="#">
-                        <h3>Updated Privacy Policy</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo
-                            aperiam,
-                            alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem obcaecati!
-                            Doloribus culpa enim cum iusto?</p>
+            </div>
+            <div class="site-main-trending">
+                <h2>Trending</h2>
+                <div class="site-main-trending-content">
+                    <a href="#" class="site-main-trending-item">
+                        <img src="" alt="">
+                        <p class="site-main-trending-handle">@tegan</p>
+                        <p class="site-main-trending-about">World Peace Builder</p>
+                    </a>
+                    <a href="#" class="site-main-trending-item">
+                        <img src="" alt="">
+                        <p class="site-main-trending-handle">@Morgan</p>
+                        <p class="site-main-trending-about">Super Cool Project</p>
+                    </a>
+                    <a href="#" class="site-main-trending-item">
+                        <img src="" alt="">
+                        <p class="site-main-trending-handle">@kendall</p>
+                        <p class="site-main-trending-about">Life Changing App</p>
+                    </a>
+                    <a href="#" class="site-main-trending-item">
+                        <img src="" alt="">
+                        <p class="site-main-trending-handle">@alex</p>
+                        <p class="site-main-trending-about">No Traffic Maker</p>
                     </a>
                 </div>
             </div>
-        </div>
-        <div class="site-main-trending">
-            <h2>Trending</h2>
-            <div class="site-main-trending-content">
-                <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@tegan</p>
-                    <p class="site-main-trending-about">World Peace Builder</p>
-                </a>
-                <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@Morgan</p>
-                    <p class="site-main-trending-about">Super Cool Project</p>
-                </a>
-                <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@kendall</p>
-                    <p class="site-main-trending-about">Life Changing App</p>
-                </a>
-                <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@alex</p>
-                    <p class="site-main-trending-about">No Traffic Maker</p>
-                </a>
-            </div>
-        </div>
     </section>
     <section class="site-sidebar">
         <div class="site-sidebar-header">
