continued to style grid of site-main, added style to site-header-options-items

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </hgroup>
         <ul class="site-header-options">
             <li>
-                <a href="#">New</a>
+                <a href="#" class="site-header-options-item">New</a>
             </li>
             <li>
-                <a href="#">Upload</a>
+                <a href="#" class="site-header-options-item">Upload</a>
             </li>
             <li>
-                <a href="#">Share</a>
+                <a href="#" class="site-header-options-item">Share</a>
             </li>
         </ul>
         <div class="site-header-search">
