styled sidebar font color, added classes to sidebar elements

--- a/index.html
+++ b/index.html
@@ -222,39 +222,39 @@
             </hgroup>
         </div>
         <div class="site-sidebar-nav">
-            <ul>
-                <li>
-                    <a href="#">
+            <ul class="site-sidebar-nav-list">
+                <li class="site-sidebar-nav-list-item">
+                    <a href="#" class="site-sidebar-nav-list-item-a">
                         <!-- <svg></svg> -->
                         Home
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="site-sidebar-nav-list-item">
+                    <a href="#" class="site-sidebar-nav-list-item-a">
                         <!-- <svg></svg> -->
                         Profile
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="site-sidebar-nav-list-item">
+                    <a href="#" class="site-sidebar-nav-list-item-a">
                         <!-- <svg></svg> -->
                         Messages
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="site-sidebar-nav-list-item-a">
                         <!-- <svg></svg> -->
                         History
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="site-sidebar-nav-list-item">
+                    <a href="#" class="site-sidebar-nav-list-item-a">
                         <!-- <svg></svg> -->
                         Tasks
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="site-sidebar-nav-list-item">
+                    <a href="#" class="site-sidebar-nav-list-item-a">
                         <!-- <svg></svg> -->
                         Communities
                     </a>
@@ -262,21 +262,21 @@
             </ul>
         </div>
         <div class="site-sidebar-options">
-            <ul>
-                <li>
-                    <a href="#">
+            <ul class="site-sidebar-options-list">
+                <li class="site-sidebar-options-list">
+                    <a href="#" class="site-sidebar-options-list-item-a">
                         <!-- <svg></svg> -->
                         Settings
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="site-sidebar-options-item">
+                    <a href="#" class="site-sidebar-options-list-item-a">
                         <!-- <svg></svg> -->
                         Support
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="site-sidebar-options-item">
+                    <a href="#" class="site-sidebar-options-list-item-a">
                         <!-- <svg></svg> -->
                         Privacy
                     </a>
