retrieved and added actual hexcode values and replaced the placeholders

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <p>Hi there,</p>
             <img>
         </hgroup>
-        <ul class="site-header-options">
-            <li>
-                <a href="#" class="site-header-options-item">New</a>
+        <ul class="site-header-options-list">
+            <li class="site-sidebar-options-list-item">
+                <a href="#" class="site-header-options-item-a">New</a>
             </li>
-            <li>
-                <a href="#" class="site-header-options-item">Upload</a>
+            <li class="site-sidebar-options-list-item">
+                <a href="#" class="site-header-options-item-a">Upload</a>
             </li>
-            <li>
-                <a href="#" class="site-header-options-item">Share</a>
+            <li class="site-sidebar-options-list-item">
+                <a href="#" class="site-header-options-item-a">Share</a>
             </li>
         </ul>
         <div class="site-header-search">
