--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
             <img>
         </hgroup>
         <ul class="site-header-options-list">
-            <li class="site-sidebar-options-list-item">
+            <li class="site-header-options-list-item">
                 <a href="#" class="site-header-options-item-a">New</a>
             </li>
-            <li class="site-sidebar-options-list-item">
+            <li class="site-header-options-list-item">
                 <a href="#" class="site-header-options-item-a">Upload</a>
             </li>
-            <li class="site-sidebar-options-list-item">
+            <li class="site-header-options-list-item">
                 <a href="#" class="site-header-options-item-a">Share</a>
             </li>
         </ul>
         <div class="site-header-search">
             <form>
-                <button type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <title>magnify</title>
+                <button class="site-header-search-button" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512" height="16" width="16">
                         <path
-                            d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
                     </svg>
                 </button>
-                <input type="text" name="search">
+                <input class="site-header-search-bar" type="text" name="search">
             </form>
         </div>
         <div class="site-header-nav">
@@ -263,7 +263,7 @@
         </div>
         <div class="site-sidebar-options">
             <ul class="site-sidebar-options-list">
-                <li class="site-sidebar-options-list">
+                <li class="site-sidebar-options-item">
                     <a href="#" class="site-sidebar-options-list-item-a">
                         <!-- <svg></svg> -->
                         Settings
