finished styling search-bar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
         </ul>
         <div class="site-header-search">
-            <form>
+            <form class="site-header-search-form">
                 <button class="site-header-search-button" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="16" width="16">
                         <path
